--- a/app/views/editorial/_blocco_art_similari.html.erb
+++ b/app/views/editorial/_blocco_art_similari.html.erb
@@ -8,23 +8,24 @@
               <% @artsimilar.each do |articolo| %>
                 <div class="fs-content-layout">
                   <div class="fs-content-layout-row">
-                    <div class="fs-layout-cell layout-item-3">
-                      <%= link_to_articolo(articolo, :title=> h(truncate(articolo.subject, :length => 50))) %>
+                    <div class="fs-layout-cell layout-item-3" style="text-align: left;">
+                      <%= link_to_articolo(articolo, :title=> h(smart_truncate(articolo.subject, 120))) %>
                        <%# articolo.section.issues.count %>
-                      <span class="fs-postauthoricon">
-                          <%= h articolo.author %>
-                        </span>
-                      <br/>
+                       <br/>
 
                       <div class="fs-postcontent">
                         <div class="fs-box-link">
-                        <%= link_to_articolo(articolo, :title=> h(smart_truncate(articolo.summary, 130))) %>
-                        <br/></div>  </div>
+                       <div><%= image_tag art_image(articolo, :s) %></div>
+                        <%= link_to_articolo(articolo, :title=> h(smart_truncate(articolo.summary, 220))) %>
+                        <br/>
+                        </div>
+                      </div>
                       <%# link_to "Continua... ", link_to_articolo(articolo) %>
                       <p class="separticle"></p>
                     </div>
                   </div>
                 </div>
+                  <hr>
               <% end %>
             </article>
       </div>
