--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,6 +1,5 @@
-<%# render :partial => 'blocco_sidebar2' %>
-<h1 style="display:none">ARTICOLO DETTAGLIO DI <b>UNO SOLO</b> ARTICOLO</h1>
-<div class="fs-layout-cell fs-content clearfix">
+<%# render :partial => 'blocco_sidebar2'  ( se sidebar 2 stretta sotto: style="width: 79%;") %>
+<div class="fs-layout-cell fs-content clearfix" style="width: 79%;">
   <article class="fs-post fs-article">
     <div class="fs-postcontent fs-postcontent-0 clearfix">
       <div class="fs-content-layout">
@@ -19,6 +18,4 @@
 
   <div class="clearfix"></div>
 </div>
-
 <%= render :partial => 'blocco_sidebar2' %>
-<%#sidebar a destra %>
