--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -1,24 +1,38 @@
 <%= f.error_messages %>
 <div class="box tabular">
   <p><%= f.text_field :espositore, :label => :field_espositore, :required => true %></p>
+
   <p><%= f.text_field :url, :label => :field_url, :required => false, :size => 80 %></p>
+
   <p><%= f.check_box :se_visibile, :label => :field_se_visibile %></p>
+
   <p><%= f.text_field :priorita, :label => :field_priorita, :size => 3 %></p>
+
   <p><%# f.text_field :posizione, :label => :field_posizione, :required => true, :size => 80 %></p>
+
   <p><%= f.text_field :impressions, :label => :field_impressions, :size => 3 %></p>
+
   <p><%= f.text_field :clicks, :label => :field_clicks, :size => 3 %></p>
+
   <p><%= f.text_field :impressions_history, :label => :field_impressions_history, :size => 3 %></p>
-   <p> <%= f.select(:posizione, ['associazione', 'block_l', 'block_s', 'tramenu'], {}, {:class => '', :label => :field_posizione}) %><span class="mini-legend"> * NB: se si seleziona 'associazione' verrà visualizzato il 'Banner Associazione' negli altri casi verrà visualizzato il campo 'Immagine' </span></p>
+
+  <p> <%= f.select(:posizione, ['associazione', 'block_l', 'block_s', 'tramenu'], {}, {:class => '', :label => :field_posizione}) %>
+    <span class="mini-legend"> * NB: se si seleziona 'associazione' verrà visualizzato il 'Banner Associazione' negli
+    altri casi verrà visualizzato il campo 'Immagine' </span></p>
+
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
+
   <p id="prev" style="max-height: 300px;"> <%= image_tag @group_banner.image.url(:original) %>   </p>
 
-  <p><label>Banner Associazione </label> <%= f.cktext_area :didascalia, :width => 775 , :label => :field_banner  , :height => 456,  :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %></p>
+  <p><label>Banner
+    Associazione </label> <%= f.cktext_area :didascalia, :width => 775, :label => :field_banner, :height => 456, :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %>
+  </p>
 
-   <hr/>
+  <hr/>
   <div>
     <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
       <li>
-       Info casella POSIZIONE:
+        Info casella POSIZIONE:
 
       </li>
       <li>
@@ -41,13 +55,15 @@
       </li>
     </ul>
   </div>
-  <p><%= f.text_field :banner, :label => :field_banner, :required => false, :size => 80 %><span class="mini-legend">*obsoleto</span></p>
-  <p><%= f.check_box :se_prima_pagina, :label => :field_se_prima_pagina %> <span class="mini-legend">*obsoleto</span> </p>
+  <p><%= f.text_field :banner, :label => :field_banner, :required => false, :size => 80 %>
+    <span class="mini-legend">*obsoleto</span></p>
+
+  <p><%= f.check_box :se_prima_pagina, :label => :field_se_prima_pagina %> <span class="mini-legend">*obsoleto</span>
+  </p>
 </div>
 <script type="text/javascript">
     (function () {
 
-        //funct_avatar('i');
         document.getElementById('group_banner_image').addEventListener('change', function (event) {
             if (!event) // i.e. the argument is undefined or null
                 event = window.event;
